[gd_scene load_steps=7 format=3 uid="uid://chdp5o23k7j6y"]

[ext_resource type="Theme" uid="uid://teu20qwi31ko" path="res://theme_file.tres" id="1_hqky7"]
[ext_resource type="Script" path="res://main.gd" id="1_kbd4v"]
[ext_resource type="Script" path="res://CodeEdit.gd" id="1_s00do"]
[ext_resource type="Texture2D" uid="uid://djmxapalvkmf8" path="res://background.jpg" id="2_ffs6m"]

[sub_resource type="InputEventKey" id="InputEventKey_jthog"]
device = -1
ctrl_pressed = true
keycode = 83

[sub_resource type="Shortcut" id="Shortcut_xthfc"]
events = [SubResource("InputEventKey_jthog")]

[node name="main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kbd4v")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ffs6m")
expand_mode = 1

[node name="CodeEdit" type="CodeEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 39.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_hqky7")
draw_tabs = true
indent_automatic = true
auto_brace_completion_enabled = true
auto_brace_completion_highlight_matching = true
script = ExtResource("1_s00do")
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.004
anchor_bottom = 0.004
offset_top = -0.297
offset_right = 98.0
offset_bottom = 30.703

[node name="save" type="Button" parent="HBoxContainer"]
layout_mode = 2
shortcut = SubResource("Shortcut_xthfc")
text = "Save"

[node name="open" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Open"

[node name="new" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "New"

[node name="openDialog" type="FileDialog" parent="."]
title = "Open a File"
position = Vector2i(215, 100)
size = Vector2i(840, 467)
ok_button_text = "Open"
file_mode = 0
access = 2

[node name="newDialog" type="FileDialog" parent="."]
position = Vector2i(215, 100)
size = Vector2i(840, 467)
ok_button_text = "Save"
access = 2

[connection signal="pressed" from="HBoxContainer/save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="HBoxContainer/open" to="." method="_on_open_pressed"]
[connection signal="pressed" from="HBoxContainer/new" to="." method="_on_new_pressed"]
[connection signal="file_selected" from="openDialog" to="." method="_on_open_dialog_file_selected"]
[connection signal="file_selected" from="newDialog" to="." method="_on_new_dialog_file_selected"]
